Changes accelerators registered by mus to not interfere with those of client

Also converts away from using EventMatcher for these accelerators as
EventMatcher is overkill here. If we really need to use EventMatcher
we can do that later on.

This results in a bit of duplication for ctrl-alt-shift-s, but I think
that's ok.

BUG=633270
TEST=none
R=jamescook@chromium.org

Review-Url: https://codereview.chromium.org/2208443002
Cr-Commit-Position: refs/heads/master@{#409629}

Former-commit-id: 5aafc35e42348c0aedfee277e27d7c4f920b3122